...
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:fontFamily="@font/convergence"

                    android:layout_height="match_parent" />
                <ImageButton
                    android:id="@+id/Onofbluetooth"
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:layout_margin="5dp"
                    android:background="@drawable/buttonshape"
                    android:src="@drawable/onbluetooth"
                    android:onClick="OnBluetoooth"
                    android:contentDescription="image"
                    android:layout_height="match_parent" />
                <ImageButton
                    android:text="show"
                    android:textSize="12sp"
                    android:id="@+id/Searchavailable"
                    android:layout_width="0dp"
                    android:layout_margin="5dp"
                    android:background="@drawable/buttonshape"
                    android:onClick="SerchNearBlueTooth"
                    android:src="@drawable/bluetoothsearch"
                    android:layout_weight="0.5"
...
